[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g729lib"
version = "0.1"
authors = [
  { name="https://github.com/schorschii" },
]
description = "Python bindings for the libbcg729 audio codec C library"
keywords = ["g729", "libbcg729", "codec", "decoder", "encoder"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
dependencies = []

[project.urls]
Homepage = "https://github.com/schorschii/g729lib"
Issues = "https://github.com/schorschii/g729lib/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "venv/",
]
